Launch SuperSU from Settings
* images taken from commit by Jorrit Jongma <git@jongma.org>

Change-Id: Ia5dafad75501fb9443e8d8b0470a10b51d0aa4d5
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/res/values/unholy_strings.xml
+++ b/res/values/unholy_strings.xml
@@ -26,4 +26,7 @@
   <!-- Dev Options Enabled by Default -->
   <string name="show_dev_already_enabled">Relax, Developer options are already enabled.</string>
 
+  <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+  <string name="supersu_title">SuperSU</string>
+
 </resources>
