Settings: Add volume tones back [2/2]
This patch allows the users to choose if they want the audible tone when adjusting the volume

Change-Id: I6d43cba83bf4cf10f2d50502e7cee5408a73c520

--- a/res/xml/other_sound_settings.xml
+++ b/res/xml/other_sound_settings.xml
@@ -39,6 +39,14 @@
             android:key="docking_sounds"
             android:title="@string/docking_sounds_title" />
 
+    <!-- Volume Adjust sounds -->
+    <SwitchPreference
+            android:key="volume_adjust_sounds"
+            android:title="@string/volume_adjust_sounds_title"
+            android:switchTextOff=""
+            android:switchTextOn=""
+            android:persistent="true" />
+
     <!-- Touch sounds -->
     <SwitchPreference
             android:key="touch_sounds"
