--- a/res/values/unholy_strings.xml
+++ b/res/values/unholy_strings.xml
@@ -23,6 +23,9 @@
   <string name="build_date">Build Date</string>
   <string name="mod_version_default">Default</string>
 
+  <!-- Volume settings - Volume adjustment sound -->
+  <string name="volume_adjust_sounds_title">Volume adjustment sounds</string>
+
   <!-- App details: open play store link if app is user installed -->
   <string name="app_play_store">Google Play</string>
 
