Add ability to ignore interruptions while active media playback [2/2]
Change-Id: I92e9b6cbab1f167f8abb544a0a8e385e23b16775

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -70,6 +70,12 @@
                 android:entryValues="@array/less_notification_sounds_values"
                 android:persistent="false" />
 
+        <!-- Prevent audio ducking -->
+        <com.unholy.settings.preference.SystemSettingSwitchPreference
+                android:key="zen_disable_ducking_during_media_playback"
+                android:title="@string/interruptions_ignore_while_media_title"
+                android:summary="@string/interruptions_ignore_while_media_summary" />
+
         <!-- Interruptions -->
         <com.android.settingslib.RestrictedPreference
                 android:key="zen_mode"
