Enable Development Settings By Default regardless of build type * also kill dev countdown +re-redo already enabled string
Change-Id: Idb51be71c2c748b94f6af927a06adc6f5dc22103
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/res/values/unholy_strings.xml
+++ b/res/values/unholy_strings.xml
@@ -22,4 +22,8 @@
   <string name="unholy_mod_version">Unholy version</string>
   <string name="build_date">Build Date</string>
   <string name="mod_version_default">Default</string>
+
+  <!-- Dev Options Enabled by Default -->
+  <string name="show_dev_already_enabled">Relax, Developer options are already enabled.</string>
+
 </resources>
