--- a/res/values/unholy_strings.xml
+++ b/res/values/unholy_strings.xml
@@ -14,6 +14,11 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+  <!-- Unholy Settings -->
+  <string name="unholy_settings_title">Unholy Settings</string>
+  <string name="header_category_unholy">Customizations</string>
+
+  <!-- Rom Version -->
   <string name="unholy_mod_version">Unholy version</string>
   <string name="build_date">Build Date</string>
   <string name="mod_version_default">Default</string>
