--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -84,6 +84,12 @@
                 android:title="@string/doze_title"
                 android:summary="@string/doze_summary" />
 
+        <com.unholy.settings.preference.GlobalSettingSwitchPreference
+                android:key="wake_when_plugged_or_unplugged"
+                android:title="@string/wake_when_plugged_or_unplugged_title"
+                android:summary="@string/wake_when_plugged_or_unplugged_summary"
+                android:defaultValue="true" />
+
         <PreferenceScreen
                 android:key="font_size"
                 android:title="@string/title_font_size"
