--- a/res/values/unholy_strings.xml
+++ b/res/values/unholy_strings.xml
@@ -56,4 +56,9 @@
   <string name="volume_steps_7">7</string>
   <string name="volume_steps_5">5</string>
 
+  <!-- Linked / unlinked notification volume -->
+  <string name="link_volume_option_title">Link ring and notification volume</string>
+  <string name="notification_volume_option_title">Notification volume</string>
+  <string name="ring_notification_volume_option_title">Ring and notification volume</string>
+
 </resources>
