--- a/res/values/unholy_strings.xml
+++ b/res/values/unholy_strings.xml
@@ -68,7 +68,7 @@
   <!-- Less Notification sounds -->
   <string name="less_notification_sounds_title">Less frequent notification sounds</string>
   <string name="less_notification_sounds_summary">Limit the notification sounds of each app to only play once per set time period</string>
-  <string name="less_notification_sounds_default">Default Behavior</string>
+  <string name="less_notification_sounds_default">Default behavior</string>
   <string name="less_notification_sounds_3s">3 seconds</string>
   <string name="less_notification_sounds_5s">5 seconds</string>
   <string name="less_notification_sounds_10s">10 seconds</string>
